Thu Oct  04 06:22:44 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed nasty bug in Ewl_Entry, when you do mouse_down after the
	  text, it would set the cursor pos to be to high, this
	  triggered bug when pressing delete/backspace, which could
	  result in a SEGV.
	* Also made the cursor show up after the text when cursor pos
	  is @ end. Before it didn't show up at all.
	* Fixed memleak in __ewl_entry_delete_to_right.

Thu Oct  04 00:47:42 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Now all theme data is read from the current theme's theme.db.
	* Fixed some more unwanted behaviour in Ewl_Table.
	* Made it possible to cache theme data keys & values.
	  You can turn this on & off in ewl_config.

Wed Oct  03 14:56:33 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Reolved lot's of possible segv's in the Ewl_Table code.          
	  Also made it lay out children correctly, still nedds lots of
	  work, but it's a start.

Wed Oct  03 06:13:14 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed some really unwanted behaviour in the Ewl_Box code.
	  When some of the children with EWL_FILL_POLICY_FILL had a custom
	  size set, it would calculate the size of the other children with
	  that fill policy wrong.

Tue Oct  02 07:13:20 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Made the font cache and image cache spinner in ewl_config
	  actually display kilobytes.

Tue Oct  02 06:25:20 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Added a confirm dialog to ewl_config, that pops up when you exit
	  and have unsaved changes.

Tue Oct  02 05:22:30 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed segv in __ewl_widget_destroy.
	* Fixed memleaks in the ewl_test program.
	* Made ewl_config exit nicely.
	* Spiffed up the notebook tab button bits.db's.

Tue Oct  02 03:45:39 2001 Christopher Rosendahl <crosendahl@northernwatch.com>